Raise RuntimeError in case an uninitilialized GObject.Object is marshaled

One common case where this can happen is when subclassing a GObject.Object
without chaining up __init__ and then calling a method.

https://bugzilla.gnome.org/show_bug.cgi?id=730908